--- a/src/templates/SPECIAL_PRIZE_NOTI.j2
+++ b/src/templates/SPECIAL_PRIZE_NOTI.j2
@@ -1,2 +1,2 @@
-✅ Báo cáo phân tích tổng hợp kết quả xổ số miền bắc ngày {{ date.strftime('%d-%m-%Y') }} 🔥✨
-✅ GIẢI ĐẶC BIỆT hôm nay là: {{ "{:05}".format(special) }} 🔥🔥🔥
+✨✨✨ Báo cáo phân tích tổng hợp kết quả xổ số miền bắc ngày {{ date.strftime('%d-%m-%Y') }} ✨✨✨
+🔥🔥🔥 GIẢI ĐẶC BIỆT hôm nay là: {{ "{:05}".format(special) }} 🔥🔥🔥
